--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,13 @@ add_executable(${PROJECT_NAME}
   ${FLEX_verilog_lexer_OUTPUTS}
   ${BISON_verilog_parser_OUTPUTS}
 )
-
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "tpsim")
-
 target_link_libraries(${PROJECT_NAME} Boost::program_options)
+
+find_package(Catch2 REQUIRED)
+add_executable(TPSimTest ${PROJECT_SOURCE_DIR}/test/EstimatorTest.cpp ${PROJECT_SOURCE_DIR}/src/Estimator.cpp)
+set_target_properties(TPSimTest PROPERTIES OUTPUT_NAME "test")
+target_link_libraries(TPSimTest PRIVATE Catch2::Catch2WithMain)
+include(CTest)
+include(Catch)
+catch_discover_tests(TPSimTest)
